[package]
name = "oom-safe"
version = "0.2.0"
edition = "2021"
rust-version = "1.57"
authors = ["David Li <davidli2010@foxmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Out-of-memory safe"
keywords = ["oom", "memory", "safe"]
repository = "https://github.com/davidli2010/oom-safe.git"
homepage = "https://github.com/davidli2010/oom-safe"
documentation = "https://docs.rs/oom-safe"
